[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
enumset = "1.1.5"
fixedbitset = "0.5.7"
num = "0.4.3"
regex = "1.11.1"
sscanf = "0.4.2"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"
